--- a/src/daft-distributed/Cargo.toml
+++ b/src/daft-distributed/Cargo.toml
@@ -19,12 +19,13 @@ pyo3-async-runtimes = {workspace = true, optional = true}
 rand = {workspace = true}
 reqwest = {version = "0.12.19", default-features = false, features = ["json"]}
 serde = {workspace = true}
+serde_json = {workspace = true}
 tokio = {workspace = true}
 tokio-stream = {workspace = true}
 tokio-util = {workspace = true}
 tracing = {workspace = true}
-itertools.workspace = true
 uuid = {workspace = true}
+itertools.workspace = true
 
 [features]
 python = [
