--- a/.github/workflows/broken-link-checker.yml
+++ b/.github/workflows/broken-link-checker.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Check Broken Links on getdaft.io
+name: Check Broken Links on daft.ai
 
 on:
   schedule:
@@ -15,13 +15,13 @@ jobs:
     steps:
     - name: setup broken link checker
       run: npm install -g broken-link-checker
-    - name: Check getdaft.io
+    - name: Check daft.ai
       uses: nick-fields/retry@v3
       with:
         timeout_minutes: 10
         retry_wait_seconds: 120
         max_attempts: 3
-        command: blc https://www.getdaft.io/daft -ro --verbose --exclude www.pytorch.org/ --exclude https://github.com/Eventual-Inc/Daft/ --exclude https://twitter.com/daftengine --exclude https://www.linkedin.com/company/eventualcomputing/ --exclude https://x.com/daftengine --exclude https://www.linkedin.com/showcase/daftengine/ --exclude https://scarf.sh/ --exclude https://static.scarf.sh/* --exclude https://huggingface.co/docs/dataset-viewer/en/parquet
+        command: blc https://www.daft.ai -ro --verbose --exclude www.pytorch.org/ --exclude https://github.com/Eventual-Inc/Daft/ --exclude https://twitter.com/daftengine --exclude https://www.linkedin.com/company/eventualai/ --exclude https://x.com/daftengine --exclude https://www.linkedin.com/showcase/daftengine/ --exclude https://scarf.sh/ --exclude https://static.scarf.sh/* --exclude https://huggingface.co/docs/dataset-viewer/en/parquet
   notify_on_failure:
     runs-on: self-hosted
     if: failure()
