--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,131 @@ spark = ["googleapis-common-protos == 1.56.4", "grpcio >= 1.48, < 1.57", "grpcio
 sql = ["connectorx", "sqlalchemy", "sqlglot"]
 unity = ["httpx <= 0.27.2", "unitycatalog"]
 viz = []
+dev = [
+    # Development/Build utilities
+    "ipdb",
+    "maturin",
+    "pre-commit",
+    "docker",
+
+    # Ray connection workaround
+    "aiohttp==3.12.4",
+
+    # Docker-py compatibility
+    "requests<2.32.0",
+
+    # unitycatalog-python compatibility
+    "httpx==0.27.2",
+
+    # Tracing
+    "orjson==3.10.12",
+    "py-spy==0.3.14",
+    "viztracer==0.15.6",
+
+    # Testing frameworks
+    "hypothesis==6.79.2",
+    "pytest==7.4.3",
+    "pytest-benchmark==4.0.0",
+    "pytest-cov==4.1.0",
+    "pytest-lazy-fixture==0.6.3",
+    "memray==1.17.2; platform_system != 'Windows'",
+    "pytest-codspeed==2.2.1",
+
+    # Testing dependencies
+    "lxml==5.3.0",
+    "dask[dataframe]==2024.4.1",
+    "numpy==1.26.2",
+    "pandas==2.1.3",
+    "pandas-stubs==2.2.2.240807",
+    "xxhash>=3.0.0",
+    "Pillow==10.4.0",
+    "opencv-python==4.10.0.84",
+    "tiktoken==0.9.0",
+    "duckdb==1.1.2",
+
+    # TQDM
+    "tqdm",
+
+    # Pyarrow compatibility
+    "pyarrow==19.0.1",
+    "pyarrow-stubs==19.4",
+
+    # Ray
+    "ray[data, client]==2.34.0",
+
+    # Lance
+    "pylance>=0.20.0",
+
+    # Iceberg
+    "pyiceberg==0.7.0",
+    "pydantic==2.10.6",
+    "tenacity==8.2.3",
+
+    # Delta Lake
+    "deltalake==0.5.8; platform_system == 'Windows'",
+    "deltalake==0.19.2; platform_system != 'Windows'",
+
+    # Databricks
+    "databricks-sdk==0.12.0",
+    "unitycatalog==0.1.1",
+
+    # SQL
+    "sqlalchemy==2.0.36",
+    "connectorx==0.2.3; platform_system == 'Linux' and platform_machine == 'aarch64'",
+    "connectorx==0.3.3; platform_system != 'Linux' or platform_machine != 'aarch64'",
+    "trino[sqlalchemy]==0.328.0",
+    "PyMySQL==1.1.0",
+    "psycopg2-binary==2.9.10",
+    "sqlglot==23.3.0",
+    "pyodbc==5.1.0",
+
+    # AWS
+    "s3fs==2023.12.0",
+    "boto3==1.36.20",
+    "boto3-stubs[essential,glue,s3,s3tables]==1.36.20",
+    "moto[glue,s3,s3tables,server]==5.1.1",
+
+    # Azure
+    "adlfs==2024.7.0",
+    "azure-storage-blob==12.24.0",
+
+    # GCS
+    "gcsfs==2023.12.0",
+
+    # Documentation
+    "markdown-exec",
+    "mkdocs-jupyter",
+    "mkdocs-material",
+    "mkdocs-macros-plugin",
+    "mkdocs-simple-hooks",
+    "pymdown-extensions",
+    "mkdocs-material[imaging]",
+    "mkdocstrings-python",
+    "ruff",
+    "mkdocs-minify-plugin",
+    "mkdocs-redirects",
+
+    # Daft connect testing
+    "pyspark==3.5.3",
+    "grpcio==1.68.1",
+    "grpcio-status==1.67.0",
+
+    # AI
+    "vllm; platform_system == 'Linux' and platform_machine == 'x86_64'"
+]
+
+docs = [
+    "markdown-exec",
+    "mkdocs-material",
+    "mkdocs-macros-plugin",
+    "mkdocs-simple-hooks",
+    "pymdown-extensions",
+    "mkdocs-material[imaging]",
+    "mkdocstrings-python",
+    "ruff",
+    "mkdocs-minify-plugin",
+    "mkdocs-redirects"
+]
 
 [project.scripts]
 daft = "daft.cli:main"
