Migrate daft to use uv

--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -35,7 +35,6 @@ jobs:
         cache: pip
         cache-dependency-path: |
           pyproject.toml
-          requirements-dev.txt
     - name: Setup Virtual Env
       run: |
         python -m venv venv
@@ -49,7 +48,7 @@ jobs:
         retry_wait_seconds: 10
         command: |
           source venv/bin/activate
-          uv pip install -r requirements-dev.txt
+          uv pip install -e .[docs]
     - name: Build Daft in development mode and generate docs
       run: |
         source activate
