--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,7 +7,10 @@ build:
 
 python:
   install:
-  - requirements: requirements-doc.txt
+  - method: pip
+    path: .
+    extra_requirements:
+    - docs
 
 mkdocs:
   configuration: mkdocs.yml
