--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -50,8 +50,8 @@ jobs:
         command: |
           source venv/bin/activate
           uv pip install -r requirements-dev.txt
-    # - name: Generate expression tables
-    #   run: python tools/generate_api.py
+    - name: Generate API doc tables
+      run: python tools/generate_api.py
     - name: Build Daft in development mode and generate docs
       run: |
         source activate
