readthedocs build, testing 2

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -6,7 +6,7 @@ build:
     python: '3.10'
   commands:
   - python -m venv venv
-  - source venv/bin/activate
+  - . venv/bin/activate
   - pip install uv maturin
   - maturin develop
   - python tools/generate_api.py
