--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -1,5 +1,5 @@
 name: Build Daft wheel
-run-name: 'Build Daft wheel for ${{ inputs.os }}-${{ inputs.arch }}-lts=${{ inputs.lts }}'
+run-name: 'Build Daft wheel for ${{ inputs.os }}-${{ inputs.arch }}-lts=${{ inputs.lts }}-lto=${{ inputs.use_lto }}'
 
 on:
   workflow_call:
@@ -16,6 +16,10 @@ on:
       build_type:
         description: Value to set RUST_DAFT_PKG_BUILD_TYPE to (release, dev, nightly, etc.)
         type: string
+      use_lto:
+        description: Whether to use link-time optimization (release-lto profile)
+        type: boolean
+        default: true
 
 env:
   PYTHON_VERSION: 3.11
@@ -77,7 +81,7 @@ jobs:
       uses: PyO3/maturin-action@v1
       with:
         target: x86_64
-        args: --profile release-lto --out dist
+        args: --profile ${{ inputs.use_lto && 'release-lto' || 'release' }} --out dist
       env:
         GITHUB_ACTIONS: true
 
@@ -88,7 +92,7 @@ jobs:
         target: x86_64
         manylinux: 2_24
         # only produce sdist for linux x86 to avoid multiple copies
-        args: --profile release-lto --out dist --sdist
+        args: --profile ${{ inputs.use_lto && 'release-lto' || 'release' }} --out dist --sdist
       env:
         GITHUB_ACTIONS: true
 
@@ -99,7 +103,7 @@ jobs:
         target: aarch64-unknown-linux-gnu
         manylinux: 2_24
         # only produce sdist for linux x86 to avoid multiple copies
-        args: --profile release-lto --out dist --sdist
+        args: --profile ${{ inputs.use_lto && 'release-lto' || 'release' }} --out dist --sdist
         before-script-linux: export JEMALLOC_SYS_WITH_LG_PAGE=16
       env:
         GITHUB_ACTIONS: true
@@ -109,7 +113,7 @@ jobs:
       uses: PyO3/maturin-action@v1
       with:
         target: aarch64
-        args: --profile release-lto --out dist
+        args: --profile ${{ inputs.use_lto && 'release-lto' || 'release' }} --out dist
       env:
         RUSTFLAGS: -Ctarget-cpu=apple-m1
         CFLAGS: -mtune=apple-m1
@@ -118,5 +122,5 @@ jobs:
     - name: Upload wheels
       uses: actions/upload-artifact@v4
       with:
-        name: wheels-${{ inputs.os }}-${{ inputs.arch }}-lts=${{ inputs.lts }}
+        name: wheels-${{ inputs.os }}-${{ inputs.arch }}-lts=${{ inputs.lts }}-lto=${{ inputs.use_lto }}
         path: dist
