--- a/.github/workflows/publish-dev-s3.yml
+++ b/.github/workflows/publish-dev-s3.yml
@@ -2,6 +2,11 @@ name: Build dev package and publish to S3
 
 on:
   workflow_dispatch:
+    inputs:
+      use_lto:
+        description: Whether to enable link-time optimization
+        default: true
+        required: false
   workflow_call:
     inputs:
       use_lto:
