--- a/tests/ray/fake_cluster.yaml
+++ b/tests/ray/fake_cluster.yaml
@@ -1,9 +1,17 @@
-# Example command to start a cluster with this config:
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
 #
-# RAY_FAKE_CLUSTER=1 ray start --autoscaling-config=example.yaml --head --block
+#     http://www.apache.org/licenses/LICENSE-2.0
 #
-# Alternatively, you can programmatically create a fake autoscaling cluster
-# using ray.cluster_utils.AutoscalingCluster.
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
+# Borrowed and modified from [`ray`](https://github.com/ray-project/ray/blob/master/python/ray/autoscaler/_private/fake_multi_node/example.yaml).
+
 cluster_name: fake_multinode
 max_workers: 8
 provider:
