--- a/src/daft-stats/Cargo.toml
+++ b/src/daft-stats/Cargo.toml
@@ -1,10 +1,13 @@
 [dependencies]
+common-display = {path = "../common/display", default-features = false}
 common-error = {path = "../common/error", default-features = false}
+common-scan-info = {path = "../common/scan-info", default-features = false}
 daft-core = {path = "../daft-core", default-features = false}
 daft-dsl = {path = "../daft-dsl", default-features = false}
 daft-recordbatch = {path = "../daft-recordbatch", default-features = false}
 serde = {workspace = true}
 snafu = {workspace = true}
+num-format.workspace = true
 
 [features]
 python = ["common-error/python", "daft-core/python", "daft-dsl/python", "daft-recordbatch/python"]
