--- a/src/daft-local-execution/Cargo.toml
+++ b/src/daft-local-execution/Cargo.toml
@@ -37,6 +37,7 @@ parking_lot = {workspace = true}
 pin-project = "1"
 pyo3 = {workspace = true, optional = true}
 pyo3-async-runtimes = {workspace = true, optional = true}
+rand = {workspace = true}
 reqwest = {version = "0.12.19", default-features = false}
 snafu = {workspace = true}
 tokio = {workspace = true}
