--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -15,7 +15,7 @@ httpx==0.27.2
 
 # Tracing
 orjson==3.10.12  # orjson recommended for viztracer
-py-spy==0.3.14
+py-spy>=0.3.14
 viztracer==0.15.6
 
 # Testing frameworks
