--- a/.github/workflows/pr-test-suite.yml
+++ b/.github/workflows/pr-test-suite.yml
@@ -83,9 +83,6 @@ jobs:
       if: ${{ (matrix.pyarrow-version == '8.0.0') }}
       run: uv pip install deltalake==0.10.0
 
-    - name: Setup upterm session
-      uses: lhotari/action-upterm@v1
-
     # Rust code coverage does not work on ubuntu-latest, so we only run it on macOS
     # For more info: https://github.com/Eventual-Inc/Daft/issues/3801
     - name: Build library and Test with pytest (Linux)
@@ -159,10 +156,10 @@ jobs:
     if: always()
     steps:
     - name: All tests ok
-      if: ${{ !(contains(needs.*.result, 'failure')) }}
+      if: ${{ !(contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled')) }}
       run: exit 0
     - name: Some tests failed
-      if: ${{ contains(needs.*.result, 'failure') }}
+      if: ${{ contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled') }}
       run: exit 1
 
   integration-test-build:
@@ -753,10 +750,10 @@ jobs:
     if: always()
     steps:
     - name: All tests ok
-      if: ${{ !(contains(needs.*.result, 'failure')) }}
+      if: ${{ !(contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled')) }}
       run: exit 0
     - name: Some tests failed
-      if: ${{ contains(needs.*.result, 'failure') }}
+      if: ${{ contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled') }}
       run: exit 1
 
   benchmark-codspeed:
@@ -890,10 +887,10 @@ jobs:
     if: always()
     steps:
     - name: All tests ok
-      if: ${{ !(contains(needs.*.result, 'failure')) }}
+      if: ${{ !(contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled')) }}
       run: exit 0
     - name: Some tests failed
-      if: ${{ contains(needs.*.result, 'failure') }}
+      if: ${{ contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled') }}
       run: exit 1
 
   check-unused-cargo-deps:
@@ -1076,10 +1073,10 @@ jobs:
     if: always()
     steps:
     - name: All tests ok
-      if: ${{ !(contains(needs.*.result, 'failure')) }}
+      if: ${{ !(contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled')) }}
       run: exit 0
     - name: Some tests failed
-      if: ${{ contains(needs.*.result, 'failure') }}
+      if: ${{ contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled') }}
       run: exit 1
 
 
