ci: fail on timeout (#4833)
## Changes Made

<!-- Describe what changes were made and why. Include implementation
details if necessary. -->

## Related Issues

<!-- Link to related GitHub issues, e.g., "Closes #123" -->

## Checklist

- [ ] Documented in API Docs (if applicable)
- [ ] Documented in User Guide (if applicable)
- [ ] If adding a new documentation page, doc is added to
`docs/mkdocs.yml` navigation
- [ ] Documentation builds and is formatted properly (tag @/ccmao1130
for docs review)

--- a/.github/workflows/pr-test-suite.yml
+++ b/.github/workflows/pr-test-suite.yml
@@ -155,10 +155,10 @@ jobs:
     if: always()
     steps:
     - name: All tests ok
-      if: ${{ !(contains(needs.*.result, 'failure')) }}
+      if: ${{ !(contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled')) }}
       run: exit 0
     - name: Some tests failed
-      if: ${{ contains(needs.*.result, 'failure') }}
+      if: ${{ contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled') }}
       run: exit 1
 
   integration-test-build:
@@ -749,10 +749,10 @@ jobs:
     if: always()
     steps:
     - name: All tests ok
-      if: ${{ !(contains(needs.*.result, 'failure')) }}
+      if: ${{ !(contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled')) }}
       run: exit 0
     - name: Some tests failed
-      if: ${{ contains(needs.*.result, 'failure') }}
+      if: ${{ contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled') }}
       run: exit 1
 
   benchmark-codspeed:
@@ -886,10 +886,10 @@ jobs:
     if: always()
     steps:
     - name: All tests ok
-      if: ${{ !(contains(needs.*.result, 'failure')) }}
+      if: ${{ !(contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled')) }}
       run: exit 0
     - name: Some tests failed
-      if: ${{ contains(needs.*.result, 'failure') }}
+      if: ${{ contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled') }}
       run: exit 1
 
   check-unused-cargo-deps:
@@ -1072,10 +1072,10 @@ jobs:
     if: always()
     steps:
     - name: All tests ok
-      if: ${{ !(contains(needs.*.result, 'failure')) }}
+      if: ${{ !(contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled')) }}
       run: exit 0
     - name: Some tests failed
-      if: ${{ contains(needs.*.result, 'failure') }}
+      if: ${{ contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled') }}
       run: exit 1
 
 
