--- a/.github/workflows/publish-dev-s3.yml
+++ b/.github/workflows/publish-dev-s3.yml
@@ -15,6 +15,11 @@ on:
         type: boolean
         default: true
         required: false
+      use_free_threaded:
+        description: Whether to build for free-threaded Python (3.13+)
+        type: boolean
+        default: false
+        required: false
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -52,7 +57,7 @@ jobs:
         echo "build_exists=$OBJECT_EXISTS" >> "$GITHUB_OUTPUT"
 
   build:
-    name: 'Build Daft wheel for ${{ matrix.os }}-${{ matrix.arch }}-lts=${{ matrix.lts }}-lto=${{ inputs.use_lto }}'
+    name: 'Build Daft wheel for ${{ matrix.os }}-${{ matrix.arch }}-lts=${{ matrix.lts }}-lto=${{ inputs.use_lto }}-free-threaded=${{ inputs.use_free_threaded }}'
     needs: check-exists
     if: ${{ needs.check-exists.outputs.build_exists == 'false' }}
     uses: ./.github/workflows/build-wheel.yml
@@ -61,6 +66,7 @@ jobs:
       arch: ${{ matrix.arch }}
       lts: ${{ matrix.lts }}
       use_lto: ${{ inputs.use_lto }}
+      use_free_threaded: ${{ inputs.use_free_threaded }}
       build_type: release
     strategy:
       fail-fast: false
