--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -1,5 +1,5 @@
 name: Build Daft wheel
-run-name: 'Build Daft wheel for ${{ inputs.os }}-${{ inputs.arch }}-lts=${{ inputs.lts }}-lto=${{ inputs.use_lto }}'
+run-name: 'Build Daft wheel for ${{ inputs.os }}-${{ inputs.arch }}-lts=${{ inputs.lts }}-lto=${{ inputs.use_lto }}-free-threaded=${{ inputs.use_free_threaded }}'
 
 on:
   workflow_call:
@@ -20,6 +20,10 @@ on:
         description: Whether to use link-time optimization (release-lto profile)
         type: boolean
         default: true
+      use_free_threaded:
+        description: Whether to build for free-threaded Python (3.13+)
+        type: boolean
+        default: false
 
 env:
   PYTHON_VERSION: 3.11
@@ -41,7 +45,7 @@ jobs:
         fetch-depth: 0
     - uses: actions/setup-python@v5
       with:
-        python-version: ${{ env.PYTHON_VERSION }}
+        python-version: ${{ inputs.use_free_threaded && '3.13t' || env.PYTHON_VERSION }}
     - uses: oven-sh/setup-bun@v2
       with:
         bun-version: latest
@@ -122,5 +126,5 @@ jobs:
     - name: Upload wheels
       uses: actions/upload-artifact@v4
       with:
-        name: wheels-${{ inputs.os }}-${{ inputs.arch }}-lts=${{ inputs.lts }}-lto=${{ inputs.use_lto }}
+        name: wheels-${{ inputs.os }}-${{ inputs.arch }}-lts=${{ inputs.lts }}-lto=${{ inputs.use_lto }}-free-threaded=${{ inputs.use_free_threaded }}
         path: dist
