--- a/src/daft-functions-uri/Cargo.toml
+++ b/src/daft-functions-uri/Cargo.toml
@@ -6,11 +6,21 @@ daft-core = {path = "../daft-core", default-features = false}
 daft-dsl = {path = "../daft-dsl", default-features = false}
 daft-io = {path = "../daft-io", default-features = false}
 futures = {workspace = true}
+pyo3 = {workspace = true, optional = true}
 serde = {workspace = true}
 tokio = {workspace = true}
 typetag = {workspace = true}
 url = {workspace = true}
 uuid = {workspace = true}
+
+[features]
+python = [
+  "dep:pyo3",
+  "common-error/python",
+  "daft-core/python",
+  "daft-dsl/python",
+  "daft-io/python"
+]
 
 [lints]
 workspace = true
