--- a/.github/ci-scripts/requirements-freethreaded.txt
+++ b/.github/ci-scripts/requirements-freethreaded.txt
@@ -34,8 +34,8 @@ numpy==1.26.2
 pandas==2.1.3
 pandas-stubs==2.2.2.240807
 xxhash>=3.0.0
+Pillow==11.0.0  # Minimum version for Python 3.13t
 # Following are not available on Python 3.13
-# Pillow==10.4.0
 # opencv-python==4.10.0.84
 # tiktoken==0.9.0
 # duckdb==1.1.2
