--- a/src/daft-core/Cargo.toml
+++ b/src/daft-core/Cargo.toml
@@ -1,6 +1,7 @@
 [dependencies]
 arrow-array = {workspace = true}
 arrow2 = {workspace = true, features = [
+  "arrow",
   "chrono-tz",
   "compute_take",
   "compute_cast",
