--- a/src/daft-local-execution/Cargo.toml
+++ b/src/daft-local-execution/Cargo.toml
@@ -1,5 +1,5 @@
 [dependencies]
-arrow-array = {version = "=54.2.1"}
+arrow-array = {workspace = true}
 async-trait = {workspace = true}
 capitalize = "*"
 common-daft-config = {path = "../common/daft-config", default-features = false}
