--- a/src/daft-recordbatch/Cargo.toml
+++ b/src/daft-recordbatch/Cargo.toml
@@ -1,5 +1,5 @@
 [dependencies]
-arrow-array = {version = "54.2.1"}
+arrow-array = {workspace = true}
 arrow2 = {workspace = true, features = ["arrow"]}
 comfy-table = {workspace = true}
 common-arrow-ffi = {path = "../common/arrow-ffi", default-features = false}
