--- a/src/daft-dashboard/Cargo.toml
+++ b/src/daft-dashboard/Cargo.toml
@@ -1,5 +1,6 @@
 [dependencies]
 anyhow = "1.0"
+daft-recordbatch = {path = "../daft-recordbatch", default-features = false}
 http-body-util = "0.1"
 hyper = {features = ["full"], version = "1.6"}
 hyper-util = {features = ["tokio"], version = "0.1"}
@@ -10,10 +11,10 @@ serde_json = "1.0"
 log.workspace = true
 serde.workspace = true
 tokio.workspace = true
+uuid.workspace = true
 
 [features]
-default = ["python"]
-python = ["dep:pyo3"]
+python = ["dep:pyo3", "daft-recordbatch/python"]
 
 [lints]
 workspace = true
