--- a/src/daft-local-execution/Cargo.toml
+++ b/src/daft-local-execution/Cargo.toml
@@ -40,7 +40,7 @@ rand = {workspace = true}
 reqwest = {version = "0.12.19", default-features = false}
 smallvec = "1.15.1"
 snafu = {workspace = true}
-tokio = {workspace = true}
+tokio = {workspace = true, features = ["test-util"]}
 tokio-util = {workspace = true}
 tracing = {workspace = true}
 uuid.workspace = true
