--- a/Cargo.toml
+++ b/Cargo.toml
@@ -265,6 +265,7 @@ educe = "0.6.0"
 futures = "0.3.30"
 html-escape = "0.2.13"
 indexmap = "2.9.0"
+indicatif = "0.17"
 itertools = "0.14"
 jaq-core = "2.2.0"
 jaq-json = {version = "1.1.2", features = ["serde_json"]}
@@ -290,6 +291,7 @@ serde_json = "1.0.133"
 sha1 = "0.11.0-pre.4"
 simdutf8 = "0.1.5"
 sketches-ddsketch = {version = "0.2.2", features = ["use_serde"]}
+smallvec = {version = "1.15.1", features = ["serde"]}
 snafu = {version = "0.7.4", features = ["futures"]}
 spark-connect = {path = "src/generated/spark-connect", default-features = false}
 sqlparser = "0.51.0"
