--- a/src/daft-local-execution/Cargo.toml
+++ b/src/daft-local-execution/Cargo.toml
@@ -29,7 +29,7 @@ daft-warc = {path = "../daft-warc", default-features = false}
 daft-writers = {path = "../daft-writers", default-features = false}
 futures = {workspace = true}
 indexmap = {workspace = true}
-indicatif = "0.17"
+indicatif = {workspace = true}
 itertools = {workspace = true}
 kanal = "0.1"
 log = {workspace = true}
@@ -39,7 +39,6 @@ pyo3 = {workspace = true, optional = true}
 pyo3-async-runtimes = {workspace = true, optional = true}
 rand = {workspace = true}
 reqwest = {version = "0.12.19", default-features = false}
-smallvec = "1.15.1"
 snafu = {workspace = true}
 tokio = {workspace = true, features = ["test-util"]}
 tokio-util = {workspace = true}
