docs: improve navigation for functions doc pages

--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -50,6 +50,7 @@ jobs:
         command: |
           source venv/bin/activate
           uv pip install -r requirements-dev.txt
+          uv pip install -e docs/plugins/
     - name: Build Daft in development mode and generate docs
       run: |
         source activate
