--- a/Cargo.toml
+++ b/Cargo.toml
@@ -218,6 +218,7 @@ members = [
 
 [workspace.dependencies]
 approx = "0.5.1"
+arc-swap = "1.7.1"
 async-compat = "0.2.3"
 async-compression = {version = "0.4.12", features = [
   "tokio",
