--- a/src/daft-local-execution/Cargo.toml
+++ b/src/daft-local-execution/Cargo.toml
@@ -1,4 +1,5 @@
 [dependencies]
+arc-swap = {workspace = true}
 async-trait = {workspace = true}
 capitalize = "*"
 common-daft-config = {path = "../common/daft-config", default-features = false}
