--- a/src/daft-core/Cargo.toml
+++ b/src/daft-core/Cargo.toml
@@ -22,6 +22,7 @@ common-arrow-ffi = {path = "../common/arrow-ffi", default-features = false}
 common-display = {path = "../common/display", default-features = false}
 common-error = {path = "../common/error", default-features = false}
 common-hashable-float-wrapper = {path = "../common/hashable-float-wrapper"}
+common-io-config = {path = "../common/io-config", default-features = false}
 common-py-serde = {path = "../common/py-serde", default-features = false}
 daft-hash = {workspace = true}
 daft-minhash = {path = "../daft-minhash", default-features = false}
@@ -56,6 +57,7 @@ python = [
   "common-arrow-ffi/python",
   "common-display/python",
   "common-error/python",
+  "common-io-config/python",
   "common-py-serde/python",
   "daft-schema/python",
   "dep:numpy",
