--- a/Cargo.toml
+++ b/Cargo.toml
@@ -264,6 +264,7 @@ derive_builder = "0.20.2"
 educe = "0.6.0"
 futures = "0.3.30"
 html-escape = "0.2.13"
+image = {version = "0.25.5", default-features = false}
 indexmap = "2.9.0"
 indicatif = "0.18"
 itertools = "0.14"
