--- a/src/daft-core/Cargo.toml
+++ b/src/daft-core/Cargo.toml
@@ -14,6 +14,7 @@ arrow2 = {workspace = true, features = [
   "compute_substring",
   "io_ipc"
 ]}
+base64 = {workspace = true}
 bincode = {workspace = true}
 chrono = {workspace = true}
 chrono-tz = {workspace = true}
@@ -33,6 +34,7 @@ fastrand = "2.1.0"
 fnv = "1.0.7"
 html-escape = {workspace = true}
 hyperloglog = {path = "../hyperloglog"}
+image = {workspace = true}
 indexmap = {workspace = true, features = ["serde"]}
 itertools = {workspace = true}
 log = {workspace = true}
@@ -51,6 +53,9 @@ version = "0.25.0"
 [dependencies.xxhash-rust]
 features = ["xxh3", "const_xxh3", "xxh64"]
 version = "0.8.5"
+
+[dev-dependencies]
+rstest = {workspace = true}
 
 [features]
 python = [
