--- a/src/daft-image/Cargo.toml
+++ b/src/daft-image/Cargo.toml
@@ -1,17 +1,12 @@
 [dependencies]
 arrow2 = {workspace = true}
+base64 = {workspace = true}
 common-error = {path = "../common/error", default-features = false}
 daft-core = {path = "../daft-core", default-features = false}
 daft-dsl = {path = "../daft-dsl", default-features = false}
 log = {workspace = true}
-num-traits = "0.2.19"
 serde = {workspace = true}
 typetag = {workspace = true}
-base64.workspace = true
-
-[dependencies.image]
-features = ["gif", "jpeg", "ico", "png", "tiff", "webp", "bmp", "hdr"]
-workspace = true
 
 [features]
 python = ["common-error/python"]
