--- a/src/daft-image/Cargo.toml
+++ b/src/daft-image/Cargo.toml
@@ -2,6 +2,7 @@
 arrow2 = {workspace = true}
 base64 = {workspace = true}
 common-error = {path = "../common/error", default-features = false}
+common-image = {workspace = true}
 daft-core = {path = "../daft-core", default-features = false}
 daft-dsl = {path = "../daft-dsl", default-features = false}
 log = {workspace = true}
